--- a/post_event_reporting_master.Rmd
+++ b/post_event_reporting_master.Rmd
@@ -339,12 +339,12 @@ map_cleaner<-function(type,imported_data){
 }
 state_shapes<-invisible(readOGR("cb_2016_us_state_500k.shp",layer = "cb_2016_us_state_500k", GDAL1_integer64_policy = TRUE))
 
-
+PER_theme<-theme(plot.background = element_rect(fill = "#333A56"),legend.background = element_rect(fill = "#333A56"),axis.title = element_text(colour = "#E8E8E8"),axis.text = element_text(colour = "#E8E8E8"),legend.text = element_text(colour = "#E8E8E8"),legend.title = element_text(colour = "#E8E8E8"))
 
 
 
 ```
-<div class="intro">
+<div class="text">
 ##Intro
 
 This is a (mostly) automated post-event report that tells a story with our data, and compares to other recent and similar events so that everything we present to the client is viewed in context. It will also help us benchmark our performances in Program Year 2 as we look to build upon the success that we experienced during the first year of CPC+.
@@ -373,7 +373,7 @@ survey_gauge<-gg.gauge(round(as.numeric(last_event$Survey_response_rate)*100,dig
 
 grid.newpage()
 
-grid.draw(grobTree(rectGrob(gp=gpar(fill="#E8E8E8")),arrangeGrob(attendance_gauge,survey_gauge,ncol = 2)))
+grid.draw(grobTree(rectGrob(gp=gpar(fill="#F7F5E6")),arrangeGrob(attendance_gauge,survey_gauge,ncol = 2)))
 
 
 ```
@@ -386,7 +386,8 @@ melted_last_event<-melt(last_event,id.vars = "Event_name")
 survey_colors<-c("darkgreen","darkgoldenrod2","darkred","darkgreen","darkgoldenrod2","darkred")
 graphing_melted<-melted_last_event[20:25,]
 graphing_melted$value_numeric<-as.numeric(graphing_melted$value)
-survey_barplot<-ggplot(graphing_melted,aes(variable,value_numeric,fill=variable))+geom_bar(stat = 'identity')+scale_fill_manual(values = survey_colors)+theme(plot.background = element_rect(fill = "#328CC1"),legend.background = element_rect(fill = "#328CC1"))
+survey_barplot<-ggplot(graphing_melted,aes(variable,value_numeric,fill=variable))+geom_bar(stat = 'identity')+scale_fill_manual(values = survey_colors)
+survey_barplot<-survey_barplot+PER_theme
 survey_barplot
 
 ```
@@ -488,11 +489,13 @@ if(input$roundtwo_analysis==TRUE){
 </div>
 
 <div class= "Same__type">
+  <div class="text">
 ##Same Type Comparison
 
 This event had a `r attendance_word` attendance than the average attendance for this type of event and a `r practices_word` number of practices attend compared to the average. For the survey, it had a `r survey_response_rate_word` rate of response compared to other similar type events.
 
 These graphs compare the last event to all of the other events of the same type.
+  </div>
 
 ###Attendance and Attendance Rate vs all Other Events
 
@@ -500,12 +503,12 @@ These graphs compare the last event to all of the other events of the same type.
 
 attendance_barplot<-ggplot(melted_last_events_type[melted_last_events_type$variable=='Attendance',],aes(x=variable,y=as.numeric(value),fill=Event_name))+geom_bar(stat='identity', position = 'dodge')+geom_hline(yintercept = mean(as.numeric(melted_last_events_type[melted_last_events_type$variable=='Attendance',]$value)),linetype=2)+annotate("text",x = 0, y= mean(as.numeric(melted_last_events_type[melted_last_events_type$variable=='Attendance',]$value)),vjust= 2,hjust =-.1,label="Average Attendance")+xlab('Event')+ylab('Number of Attendees')
 
-attendance_barplot<-attendance_barplot+theme(axis.text.x = element_blank(),plot.background =element_rect(fill = "#328CC1"),legend.background = element_rect(fill = "#328CC1"))
+attendance_barplot<-attendance_barplot+PER_theme
 
 
 attendance_rate_barplot<-ggplot(melted_last_events_type[melted_last_events_type$variable=='Attendance_rate',],aes(x=variable,y=as.numeric(value),fill=Event_name))+geom_bar(stat='identity', position = 'dodge')+geom_hline(yintercept = mean(as.numeric(melted_last_events_type[melted_last_events_type$variable=='Attendance_rate',]$value)),linetype=2)+annotate("text",x = 0, y= mean(as.numeric(melted_last_events_type[melted_last_events_type$variable=='Attendance_rate',]$value)),vjust= 2,hjust =-.1,label="Average Attendance Rate")+xlab('Event')+ylab('Attendance Rate')
 
-attendance_rate_barplot<-attendance_rate_barplot+theme(axis.text.x = element_blank(),plot.background = element_rect(fill = "#328CC1"),legend.background = element_rect(fill = "#328CC1"))
+attendance_rate_barplot<-attendance_rate_barplot+PER_theme
 
 ##Room for another graph or two-- get team feedback
 
@@ -518,6 +521,7 @@ multiplot(attendance_barplot,attendance_rate_barplot)
 </div>
 
 <div class="previous_event">
+  <div class="text">
 
 ##Previous Event Comparision
 
@@ -525,6 +529,7 @@ This section gives a more in-depth breakdown between `r last_event$Event_name` a
 
 
 This first plow shows the distribution of attending roles for each event, while the second shows the comparison between positive responses to the survey question "Attending this session was a valuable use of my time".
+  </div>
 
 ###Survey and Role Comparison to Last `r last_event$'Event Type' `
 ```{r, echo=FALSE}
@@ -536,16 +541,16 @@ comparison_same_type$Negative_percentage<-round(as.numeric(comparison_same_type$
 melted_comparison<-melt(comparison_same_type,id.vars="Event_name")
 
 
-role_barplot<-ggplot(melted_comparison[11:32,],aes(x=variable,y=as.numeric(value),fill=Event_name))+geom_bar(stat = 'identity',position = 'dodge')+theme(axis.text.x = element_text(angle = 90, hjust = 1),plot.background = element_rect(fill = "#328CC1"),legend.background = element_rect(fill = "#328CC1"))+scale_y_continuous(breaks = seq(0,60,5))+xlab('Attendee Role')+ylab('Number attending')
+role_barplot<-ggplot(melted_comparison[11:32,],aes(x=variable,y=as.numeric(value),fill=Event_name))+geom_bar(stat = 'identity',position = 'dodge')+PER_theme
 
 #role_barplot
 
 survey_percents_1<-ggplot(melted_comparison[seq(55,59,2),],aes(x='',y=as.numeric(value),fill=variable,label=as.numeric(value)))+geom_bar(width=1,stat = 'identity')+geom_text()
-survey_percents_1<-survey_percents_1+coord_polar('y', start = 0)+ggtitle(paste('Survey Responses for ',melted_comparison[55,]$Event_name))+theme(axis.text.x=element_blank(),axis.title.x = element_blank(),axis.title.y=element_blank(),plot.background = element_rect(fill = "#328CC1"),legend.background = element_rect(fill = "#328CC1"))
+survey_percents_1<-survey_percents_1+coord_polar('y', start = 0)+ggtitle(paste('Survey Responses for ',melted_comparison[55,]$Event_name))+PER_theme
 
 
 survey_percents_2<-ggplot(melted_comparison[seq(56,60,2),],aes(x='',y=as.numeric(value),fill=variable,label=as.numeric(value)))+geom_bar(width=1,stat = 'identity')+geom_text()
-survey_percents_2<-survey_percents_2+coord_polar('y', start = 0)+ggtitle(paste('Survey Responses for ',melted_comparison[56,]$Event_name))+theme(axis.text.x=element_blank(),axis.title.x = element_blank(),axis.title.y=element_blank(),plot.background = element_rect(fill = "#328CC1"),legend.background = element_rect(fill = "#328CC1"))
+survey_percents_2<-survey_percents_2+coord_polar('y', start = 0)+ggtitle(paste('Survey Responses for ',melted_comparison[56,]$Event_name))+PER_theme
 
 
 
